fixations visible

--- a/visic.css
+++ b/visic.css
@@ -11,6 +11,19 @@ img {
     max-height: 100vh;
 }
 
+#fixations {
+    left: 0;
+    position: relative;
+    top: 0;
+}
+
+#fixations .fixation {
+    background-color: rgba(255, 0, 0, 0.5);
+    margin: 0;
+    padding: 0;
+    position: absolute;
+}
+
 #menu {
     background-color: rgba(224, 224, 224, 0.7);
     color: #333333;
